--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#40000000</color>
     <color name="white">#EDE4E4</color>
+    <color name="bgSettings">#F7555571</color>
 </resources>
