--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <style name="Theme.TeQubit" parent="android:Theme.Material.Light.NoActionBar" />
-    <style name="Theme.TeQubit.LIght" parent="android:Theme.Material.Light.NoActionBar">
+    <style name="Theme.TeQubit.Light" parent="android:Theme.Material.Light.NoActionBar">
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
         <item name="colorAccent">@color/teal_200</item>
