--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,17 +2,31 @@
 <resources>
 
     <style name="Theme.TeQubit" parent="android:Theme.Material.Light.NoActionBar" />
-    <style name="Theme.TeQubit.Light" parent="android:Theme.Material.Light.NoActionBar">
-        <item name="colorPrimary">@color/purple_200</item>
-        <item name="colorPrimaryVariant">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
-        <item name="android:actionBarStyle">@style/FirebaseAuthActionBarStyle.Light</item>
-        <item name="android:windowActionBarOverlay">true</item>
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+    <style name="FirebaseUI" parent="Theme.MaterialComponents">
+        <!-- Primary brand color. -->
+        <item name="colorPrimary">@color/primary_color</item>
+        <item name="colorPrimaryVariant">@color/app_dark</item>
+        <item name="colorOnPrimary">@color/app_dark</item>
+        <item name="android:statusBarColor">@color/bgSettings</item>
+        <item name="android:windowBackground">@color/app_dark</item>
+        <item name="android:textColorHint">@android:color/darker_gray</item>
+    </style>
 
+    <style name="FirebaseUI.EditText" parent="FirebaseUI">
+        <item name="android:editTextColor">@color/white</item>
+        <item name="android:textColorHint">@color/white</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
 
-        <item name="android:colorBackground">@color/white</item>
+    <style name="FirebaseUI.TextInputLayout" parent="Widget.Design.TextInputLayout">
+        <item name="android:textColorHint">@color/white</item>
+    </style>
+
+    <style name="FirebaseUI.Button" parent="FirebaseUI">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_gravity">end</item>
+        <item name="android:textColor">@color/white</item>
     </style>
     <style name="Theme.TeQubit.Dark" parent="android:Theme.Material.Light.NoActionBar">
         <item name="colorPrimary">@color/purple_200</item>
